[package]
name = "quadratic-voting-solana-turbine"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "quadratic_voting_solana_turbine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token"] }

# 🔴 critical — compatible Solana SDK (pre edition2024 crypto)
solana-program = "=2.2.1"
solana-sdk = "=2.2.1"
solana-zk-sdk = "=2.2.0"
solana-curve25519 = "=2.2.1"
solana-pubkey = "=2.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }